--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/threshold_analysis</url> -->
+  <!-- <url type="website">http://wiki.runtime.org/threshold_analysis</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -35,7 +35,7 @@
   <!--   <build_depend>message_generation</build_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
+  <!-- Use run_depend for packages you need at identification: -->
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
